--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,11 @@
     ],
     "require": {
         "phpmailer/phpmailer": "^6.9",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "twig/twig": "^3.0",
+        "vlucas/valitron": "^1.4"
+    },
+    "autoload": {
+        "psr-4": {"Mail\\": "src/"}
     }
 }
