--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-FROM=example@example.com
+MAIL_FROM=example@example.com
 SMTP_HOST=
 SMTP_PORT=
 SMTP_USER=
 SMTP_PASS=
-SMTP_SECURE=
+SMTP_SECURE=ssl
