--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "phpmailer/phpmailer": "^6.9",
         "vlucas/phpdotenv": "^5.6",
         "twig/twig": "^3.0",
-        "vlucas/valitron": "^1.4"
+        "vlucas/valitron": "^1.4",
+        "jbboehr/dnsbl": "^0.1.0"
     },
     "autoload": {
         "psr-4": {"Mail\\": "src/"}
