--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "vlucas/phpdotenv": "^5.6",
         "twig/twig": "^3.0",
         "vlucas/valitron": "^1.4",
-        "jbboehr/dnsbl": "^0.1.0"
+        "jbboehr/dnsbl": "^0.1.0",
+        "tedivm/stash": "^0.17.6",
+        "palepurple/rate-limit": "^2.0"
     },
     "autoload": {
         "psr-4": {"Mail\\": "src/"}
