--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         }
     ],
     "require": {
+        "php": ">=7.3",
         "phpmailer/phpmailer": "^6.9",
         "vlucas/phpdotenv": "^5.6",
         "twig/twig": "^3.0",
